--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,13 +6,13 @@
 
         <item name="colorPrimary">@color/color_primary</item>
 
-
         <item name="colorSecondary">@color/color_secondary</item>
         <item name="colorSecondaryVariant">@color/color_secondary_variant</item>
 
         <item name="android:windowBackground">@color/color_background</item>
         <item name="background">@color/color_background</item>
 
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
 
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/color_secondary_variant</item>
     </style>
